# eznebula

./: .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  deploy.sh  docker-compose.yml
eznebula-backend/: README.md  pom.xml  test-api.sh
eznebula-backend/src/main/java/com/eznebula/: EzNebulaApplication.java
eznebula-backend/src/main/java/com/eznebula/config/: EzNebulaProperties.java
eznebula-backend/src/main/java/com/eznebula/controller/: AdminController.java  NetworkController.java
eznebula-backend/src/main/java/com/eznebula/domain/entity/: ClientNode.java  NetworkGroup.java
eznebula-backend/src/main/java/com/eznebula/domain/repository/: ClientNodeRepository.java  NetworkGroupRepository.java
eznebula-backend/src/main/java/com/eznebula/dto/request/: JoinNetworkRequest.java
eznebula-backend/src/main/java/com/eznebula/dto/response/: ApiResponse.java  ClientInfo.java  JoinNetworkResponse.java
eznebula-backend/src/main/java/com/eznebula/exception/: AuthenticationException.java  CertificateException.java  EzNebulaException.java  GlobalExceptionHandler.java  ResourceNotFoundException.java
eznebula-backend/src/main/java/com/eznebula/service/: IpAllocationService.java  LighthouseService.java  NebulaCertService.java  NetworkService.java
eznebula-backend/src/main/resources/: application.yml
eznebula-frontend/: BUILD.md  RELEASE.md  package.json  vite.config.ts
eznebula-frontend/src/: App.tsx  main.tsx
eznebula-frontend/src-tauri/: Cargo.toml  build.rs  npcap-hook.nsh  tauri.conf.json
eznebula-frontend/src-tauri/icons/: icon.icns  single_icon.rs
eznebula-frontend/src-tauri/src/: crypto.rs  lib.rs  main.rs  models.rs  nebula.rs  network.rs  settings.rs  state.rs
eznebula-frontend/src/components/: logs-window.tsx  peers-window.tsx  server-form.tsx  servers-window.tsx  settings-window.tsx
eznebula-frontend/src/lib/: api.ts
