[package]
name = "tauri-native"
version = "0.1.0"
description = "EZNebula VPN Client"
authors = ["EZNebula"]
edition = "2021"

[lib]
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
which = "6"
url = "2"
image = "0.25"

ureq = { version = "2", features = ["json"] }
pcap = { version = "2", optional = true }

[features]
default = []
npcap = ["pcap"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
